--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.feature.vr": "1.0.0",
     "com.unity.inputsystem": "1.7.0",
     "com.unity.learn.iet-framework": "3.1.3",
+    "com.unity.postprocessing": "3.2.2",
     "com.unity.probuilder": "5.1.1",
     "com.unity.render-pipelines.universal": "14.0.9",
     "com.unity.textmeshpro": "3.0.6",
